tests/paczka1/fuzzy1/47276623.err
Error in line 15: qJjEg S327 18,1
Error in line 23: qJjEg A205 33,2
Error in line 29: qJjEg S93 94,3
Error in line 12: 9kvO3QLfi S327 98,3
Error in line 34: 5xMopRTk8 S93 224,14
Error in line 28: nKJHH A205 226,9
